Add dataTables in lists

--- a/avance/src/main/resources/static/css/style.css
+++ b/avance/src/main/resources/static/css/style.css
@@ -24,11 +24,13 @@ body {
 }*/
 
 .navbar-dark {
-  padding-top: 20px;
+  padding-top: 10px;
 }
 
 .navbar-nav .nav-item {
   padding: 5px;
+  margin: auto;
+  min-width: auto!important;
 }
 
 .card-signin {
