--- a/avance/src/main/resources/templates/layouts/form.html
+++ b/avance/src/main/resources/templates/layouts/form.html
@@ -1,4 +1,5 @@
 <html xmlns:th="http://www.thymeleaf.org">
+
     <head>
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -93,7 +94,9 @@
                                 <label for="cpf">CPF</label>
                                 <input type="text" class="form-control" id="cpf" placeholder="XXX.XXX.XXX-XX">
                             </div>
-                            <button type="submit" class="btn btn-primary btn-block">Cadastrar</button>
+                            <div class="col text-center">
+                                <button type="submit" class="btn btn-primary ">Cadastrar</button>
+                            </div>
                         </form>
                     </div>
                 </div>
