--- a/avance/src/main/resources/templates/layouts/formAviso.html
+++ b/avance/src/main/resources/templates/layouts/formAviso.html
@@ -62,21 +62,24 @@
 		<div class="container py-5">
 			<div class="row">
 				<div class="col-md-12">
-					<div class="col-md-6 offset-md-3">
+					<div class="col-md-6 offset-md-3 justify-content-center">
 						<h5 class="text-center">Cadastrar Aviso</h5>
 						<hr class="mb-5">
 						<form action="/aviso/salvar" method="POST">
-							<div class="form-row">
-								<div class="form-group col-md-6">
+							<div class="form-row justify-content-center">
+								<div class="form-group col-md-8">
 									<label for="descricao">Descrição</label>
-									<input type="text" class="form-control" id="descricao" placeholder="Descrição">
+									<textarea class="form-control" id="descricao" placeholder="Descrição"
+										rows="3"></textarea>
 								</div>
-								<div class="form-group col-md-6">
+								<div class="form-group col-md-8">
 									<label for="d">Data</label>
-									<input type="text" class="form-control" id="d" placeholder="Data">
+									<input type="date" class="form-control" id="d" placeholder="Data">
 								</div>
 							</div>
-							<button type="submit" class="btn btn-primary btn-block">Cadastrar</button>
+							<div class="col text-center">
+								<button type="submit" class="btn btn-primary">Cadastrar</button>
+							</div>
 						</form>
 					</div>
 				</div>
