--- a/avance/src/main/resources/templates/layouts/formQuestao.html
+++ b/avance/src/main/resources/templates/layouts/formQuestao.html
@@ -1,29 +1,94 @@
-<!DOCTYPE html>
-<html  xmlns:th="http://www.thymeleaf.org">
-<head>
-<meta charset="UTF-8">
-<title>VirtualRH</title>
-</head>
-<body>
-	<h3>Ola colaboradores do VirtualRH</h3>
-	
-	<form action="/questao/salvar" method="POST">
-	
-	Pergunta: <input type="text" name="pergunta"> <br>
-	Resposta: <input type="text" name="resposta"> <br>
-	
-	<input type="submit" value="Cadastrar">
-	
-	
-	
-	
-	
-	</form>
-	
-	private Long id;
-	private String pergunta;
-	private String resposta;
-	
-	
-</body>
+<html xmlns:th="http://www.thymeleaf.org">
+
+	<head>
+		<meta charset="utf-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<title>Avance RH</title>
+
+		<!-- Favicons -->
+		<link th:href="@{/img/avance-logo.png}" rel="icon" />
+		<link th:href="@{/img/avance-logo.png}" rel="apple-touch-icon" />
+
+		<link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/4.1.3/css/bootstrap.min.css}" />
+		<link rel="stylesheet" type="text/css" th:href="@{/lib/ionicons/css/ionicons.min.css}" />
+		<link rel="stylesheet" type="text/css" th:href="@{/css/style.css}" />
+	</head>
+
+	<body>
+		<nav class="navbar navbar-dark navbar-expand-md justify-content-center">
+			<a href="/" class="navbar-brand d-flex w-50 mr-auto"><img th:src="@{/img/avance-oficial.png}"></a>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbar3">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="navbar-collapse collapse w-100" id="collapsingNavbar3">
+				<ul class="navbar-nav w-100 justify-content-center">
+					<li class="nav-item">
+						<a class="nav-link" href="#">Dashboard</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link active" href="#">Treinamentos</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Funcionários</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Históricos</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Relatórios</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Cronograma</a>
+					</li>
+				</ul>
+				<ul class="nav navbar-nav ml-auto w-100 justify-content-end">
+					<li class="nav-item dropdown">
+						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+							data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+							<i class="icon ion-md-person"></i> Nome do Usuário
+						</a>
+						<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+							<a class="dropdown-item" href="#">Action</a>
+							<a class="dropdown-item" href="#">Another action</a>
+							<div class="dropdown-divider"></div>
+							<a class="dropdown-item" href="#">Sair</a>
+						</div>
+					</li>
+				</ul>
+			</div>
+		</nav>
+
+		<div class="container py-5">
+			<div class="row">
+				<div class="col-md-12">
+					<div class="col-md-6 offset-md-3 justify-content-center">
+						<h5 class="text-center">Cadastrar Questão</h5>
+						<hr class="mb-5">
+						<form action="/questao/salvar" method="POST">
+							<div class="form-row justify-content-center">
+								<div class="form-group col-md-8">
+									<label for="pergunta">Pergunta</label>
+									<textarea class="form-control" id="pergunta" placeholder="Pergunta"
+										rows="3"></textarea>
+								</div>
+								<div class="form-group col-md-8">
+									<label for="resposta">Resposta</label>
+									<input type="text" class="form-control" id="resposta" placeholder="Resposta">
+								</div>
+							</div>
+							<div class="col text-center">
+								<button type="submit" class="btn btn-primary">Cadastrar</button>
+							</div>
+						</form>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<script type="text/javascript" th:src="@{/webjars/jquery/3.2.1/jquery.min.js}"></script>
+		<script type="text/javascript" th:src="@{/webjars/bootstrap/4.1.3/js/bootstrap.min.js}"></script>
+		<script type="text/javascript" th:src="@{/webjars/bootstrap/4.1.3/js/bootstrap.bundle.min.js}"></script>
+	</body>
+
 </html>
