--- a/avance/src/main/resources/templates/layouts/listaAvisos.html
+++ b/avance/src/main/resources/templates/layouts/listaAvisos.html
@@ -1,39 +1,110 @@
-<!DOCTYPE html>
-<html  xmlns:th="http://www.thymeleaf.org">
-<head>
-<meta charset="UTF-8">
-<title>VirtualRH</title>
- <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css"/>
- <script src="/js/bootstrap.min.js"></script>
-</head>
-<body>
-	
-	
-	<table class="table">
-  <thead>
-    <tr>
-    
- 	 <th scope="col">Id</th>
-     <th scope="col">Descrição </th>
-      <th scope="col">Data</th>
-      
-    </tr>
-  </thead>
-  <tbody>
-    <tr th:each = "aviso : ${listaDeAvisos}">
-      <td th:text="${aviso.id}"></td>
-      <td th:text="${aviso.descricao}"></td>
-      <td th:text="${aviso.dataAviso}"></td>
-      
-      <td> 
-      	<a th:href="@{/aviso/excluir/{id}(id = ${aviso.id})}">
-      		<button type=button class="btn btn-danger">Remover</button>
-      	</a>
-      </td>
-      </tr>
-  </tbody>
-</table>
-	
- <script src="/js/bootstrap.min.js"></script>
-</body>
+<html xmlns:th="http://www.thymeleaf.org">
+
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Avance RH</title>
+
+    <!-- Favicons -->
+    <link th:href="@{/img/avance-logo.png}" rel="icon" />
+    <link th:href="@{/img/avance-logo.png}" rel="apple-touch-icon" />
+
+    <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/4.1.3/css/bootstrap.min.css}" />
+    <link rel="stylesheet" type="text/css" th:href="@{/lib/ionicons/css/ionicons.min.css}" />
+    <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}" />
+    <link rel="stylesheet" type="text/css"
+      th:href="@{/lib/dataTables/DataTables-1.10.20/css/dataTables.bootstrap4.min.css}" />
+  </head>
+
+  <body>
+    <nav class="navbar navbar-dark navbar-expand-md justify-content-center">
+      <a href="/" class="navbar-brand d-flex w-50 mr-auto"><img th:src="@{/img/avance-oficial.png}"></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbar3">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="navbar-collapse collapse w-100" id="collapsingNavbar3">
+        <ul class="navbar-nav w-100 justify-content-center">
+          <li class="nav-item">
+            <a class="nav-link" href="#">Dashboard</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="#">Treinamentos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Funcionários</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Históricos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Relatórios</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Cronograma</a>
+          </li>
+        </ul>
+        <ul class="nav navbar-nav ml-auto w-100 justify-content-end">
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+              aria-haspopup="true" aria-expanded="false">
+              <i class="icon ion-md-person"></i> Nome do Usuário
+            </a>
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="#">Action</a>
+              <a class="dropdown-item" href="#">Another action</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="#">Sair</a>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </nav>
+
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <h5 class="text-center">Avisos</h5>
+          <hr class="mb-5">
+          <table id="dtBasicExample" class="table table-striped table-bordered" cellspacing="0" width="100%">
+            <thead>
+              <tr>
+                <th> ID </th>
+                <th> Descrição </th>
+                <th> Data </th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr th:each="aviso : ${listaDeAvisos}">
+                <td th:text="${aviso.id}"></td>
+                <td th:text="${aviso.descricao}"></td>
+                <td th:text="${aviso.dataAviso}"></td>
+                <td>
+                  <a th:href="@{/aviso/excluir/{id}(id = ${aviso.id})}">
+                    <button type=button class="btn btn-danger">Remover</button>
+                  </a>
+                </td>
+              </tr>
+            </tbody>
+            <tfoot>
+              <tr>
+                <th> ID </th>
+                <th> Descrição </th>
+                <th> Data </th>
+              </tr>
+            </tfoot>
+          </table>
+        </div>
+      </div>
+    </div>
+
+    <script type="text/javascript" th:src="@{/webjars/jquery/3.2.1/jquery.min.js}"></script>
+    <script type="text/javascript" th:src="@{/webjars/bootstrap/4.1.3/js/bootstrap.min.js}"></script>
+    <script type="text/javascript" th:src="@{/webjars/bootstrap/4.1.3/js/bootstrap.bundle.min.js}"></script>
+    <script type="text/javascript" th:src="@{/lib/dataTables/DataTables-1.10.20/js/jquery.dataTables.min.js}"></script>
+    <script type="text/javascript"
+      th:src="@{/lib/dataTables/DataTables-1.10.20/js/dataTables.bootstrap4.min.js}"></script>
+    <script type="text/javascript" th:src="@{/js/dataTables.js}"></script>
+  </body>
+
 </html>
