--- a/avance/src/main/resources/templates/login.html
+++ b/avance/src/main/resources/templates/login.html
@@ -1,4 +1,5 @@
 <html xmlns:th="http://www.thymeleaf.org">
+
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -9,110 +10,101 @@
     <link th:href="@{/img/avance-logo.png}" rel="icon" />
     <link th:href="@{/img/avance-logo.png}" rel="apple-touch-icon" />
 
-    <link
-      rel="stylesheet"
-      type="text/css"
-      th:href="@{/webjars/bootstrap/4.1.3/css/bootstrap.min.css}"/>
-    <link rel="stylesheet" type="text/css" th:href="@{/lib/ionicons/css/ionicons.min.css}"/>
+    <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/4.1.3/css/bootstrap.min.css}" />
+    <link rel="stylesheet" type="text/css" th:href="@{/lib/ionicons/css/ionicons.min.css}" />
     <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}" />
+    <link rel="stylesheet" type="text/css"
+      th:href="@{/lib/dataTables/DataTables-1.10.20/css/dataTables.bootstrap4.min.css}" />
   </head>
 
   <body>
     <nav class="navbar navbar-dark navbar-expand-md justify-content-center">
       <a href="/" class="navbar-brand d-flex w-50 mr-auto"><img th:src="@{/img/avance-oficial.png}"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbar3">
-          <span class="navbar-toggler-icon"></span>
+        <span class="navbar-toggler-icon"></span>
       </button>
       <div class="navbar-collapse collapse w-100" id="collapsingNavbar3">
-          <ul class="navbar-nav w-100 justify-content-center">
-              <li class="nav-item">
-                  <a class="nav-link" href="#">Dashboard</a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link" href="#">Treinamentos</a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link active" href="#">Funcionários</a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link" href="#">Históricos</a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link" href="#">Relatórios</a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link" href="#">Cronograma</a>
-              </li>
-          </ul>
-          <ul class="nav navbar-nav ml-auto w-100 justify-content-end">
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  <i class="icon ion-md-person"></i> Nome do Usuário
-                </a>
-                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="#">Action</a>
-                  <a class="dropdown-item" href="#">Another action</a>
-                  <div class="dropdown-divider"></div>
-                  <a class="dropdown-item" href="#">Sair</a>
-                </div>
-              </li>
-          </ul>
+        <ul class="navbar-nav w-100 justify-content-center">
+          <li class="nav-item">
+            <a class="nav-link" href="#">Dashboard</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="#">Treinamentos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Funcionários</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Históricos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Relatórios</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Cronograma</a>
+          </li>
+        </ul>
+        <ul class="nav navbar-nav ml-auto w-100 justify-content-end">
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+              aria-haspopup="true" aria-expanded="false">
+              <i class="icon ion-md-person"></i> Nome do Usuário
+            </a>
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="#">Action</a>
+              <a class="dropdown-item" href="#">Another action</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="#">Sair</a>
+            </div>
+          </li>
+        </ul>
       </div>
     </nav>
 
-  <div class="container py-5">
-    <div class="row">
+    <div class="container">
+      <div class="row">
         <div class="col-md-12">
-          <div class="col-md-6 offset-md-3">
-            <h5 class="text-center">Cadastrar Funcionário</h5>
-            <hr class="mb-5">
-              <form action="/cadastro/salvar" method="POST">
-                <div class="form-row">
-                  <div class="form-group col-md-6">
-                    <label for="nome">Nome</label>
-                    <input type="text" class="form-control" id="nome" placeholder="Nome">
-                  </div>
-                  <div class="form-group col-md-6">
-                    <label for="email">Email</label>
-                    <input type="email" class="form-control" id="email" placeholder="Email">
-                  </div>
-                </div>
-                <div class="form-row">
-                  <div class="form-group col-md-6">
-                    <label for="login">Login</label>
-                    <input type="login" class="form-control" id="login" placeholder="Login">
-                  </div>
-                  <div class="form-group col-md-6">
-                    <label for="senha">Senha</label>
-                    <input type="senha" class="form-control" id="senha" placeholder="Senha">
-                  </div>
-                </div>
-                <div class="form-group">
-                  <label for="dataNascimentoo">Data de Nascimento</label>
-                  <input type="text" class="form-control" id="dataNascimentoo" placeholder="XX/XX/XXXX">
-                </div>
-                <div class="form-group">
-                  <label for="cpf">CPF</label>
-                  <input type="text" class="form-control" id="cpf" placeholder="XXX.XXX.XXX-XX">
-                </div>
-                <button type="submit" class="btn btn-primary btn-block">Cadastrar</button>
-              </form>
-            </div>
-          </div>
+          <h5 class="text-center">Questões</h5>
+          <hr class="mb-5">
+          <table id="dtBasicExample" class="table table-striped table-bordered" cellspacing="0" width="100%">
+            <thead>
+              <tr>
+                <th>Id</th>
+                <th>Pergunta </th>
+                <th>Resposta</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr th:each="questao : ${listaDeQuestoes}">
+                <td th:text="${questao.id}"></td>
+                <td th:text="${questao.pergunta}"></td>
+                <td th:text="${questao.resposta}"></td>
+                <td>
+                  <a th:href="@{/questao/excluir/{id}(id = ${questao.id})}">
+                    <button type=button class="btn btn-danger">Remover</button>
+                  </a>
+                </td>
+              </tr>
+            </tbody>
+            <tfoot>
+              <tr>
+                <th>Id</th>
+                <th>Pergunta </th>
+                <th>Resposta</th>
+              </tr>
+            </tfoot>
+          </table>
+        </div>
       </div>
     </div>
 
-    <script
-      type="text/javascript"
-      th:src="@{/webjars/jquery/3.0.0/jquery.min.js}"
-    ></script>
-    <script
-      type="text/javascript"
-      th:src="@{/webjars/bootstrap/4.1.3/js/bootstrap.min.js}"
-    ></script>
-    <script
-      type="text/javascript"
-      th:src="@{/webjars/bootstrap/4.1.3/js/bootstrap.bundle.min.js}"
-    ></script>
+    <script type="text/javascript" th:src="@{/webjars/jquery/3.2.1/jquery.min.js}"></script>
+    <script type="text/javascript" th:src="@{/webjars/bootstrap/4.1.3/js/bootstrap.min.js}"></script>
+    <script type="text/javascript" th:src="@{/webjars/bootstrap/4.1.3/js/bootstrap.bundle.min.js}"></script>
+    <script type="text/javascript" th:src="@{/lib/dataTables/DataTables-1.10.20/js/jquery.dataTables.min.js}"></script>
+    <script type="text/javascript"
+      th:src="@{/lib/dataTables/DataTables-1.10.20/js/dataTables.bootstrap4.min.js}"></script>
+    <script type="text/javascript" th:src="@{/js/dataTables.js}"></script>
   </body>
+
 </html>
