--- a/avance/src/main/resources/templates/layouts/ok.html
+++ b/avance/src/main/resources/templates/layouts/ok.html
@@ -1,183 +1,82 @@
-<!DOCTYPE html>
-<html  xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org">
 
-	<head>
-		<meta charset="utf-8">
-		<title>Avance RH</title>
-		<meta content="width=device-width, initial-scale=1.0" name="viewport">
-		<meta content="" name="keywords">
-		<meta content="" name="description">
+    <head>
+        <meta charset="utf-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <title>Avance RH</title>
 
-		<!-- Favicons -->
-		<link href="/img/avance-test-logo.png" rel="icon">
-		<link href="/img/avance-test-logo.png" rel="apple-touch-icon">
+        <!-- Favicons -->
+        <link th:href="@{/img/avance-logo.png}" rel="icon" />
+        <link th:href="@{/img/avance-logo.png}" rel="apple-touch-icon" />
 
-		<!-- Bootstrap CSS File -->
-		<link href="/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/4.1.3/css/bootstrap.min.css}" />
+        <link rel="stylesheet" type="text/css" th:href="@{/lib/ionicons/css/ionicons.min.css}" />
+        <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}" />
+        <link rel="stylesheet" type="text/css"
+            th:href="@{/lib/dataTables/DataTables-1.10.20/css/dataTables.bootstrap4.min.css}" />
+    </head>
 
-		<!-- Libraries CSS Files -->
-		<link href="/lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
-		<link href="/lib/animate/animate.min.css" rel="stylesheet">
-		<link href="/lib/ionicons/css/ionicons.min.css" rel="stylesheet">
-		<link href="/lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
-		<link href="/lib/lightbox/css/lightbox.min.css" rel="stylesheet">
-		
-		<!-- Google Fonts -->
-		<link
-			href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Montserrat:300,400,500,700"
-			rel="stylesheet">
-
-		<!-- Main Stylesheet File -->
-		<link href="/css/style.css" rel="stylesheet">
-	</head>
-
-	<body>
-
-		<header id="header">
-			<div class="container-fluid">
-
-                <div id="logo" class="pull-left">
-                    <h1><a href="" class="scrollto">Avance</a></h1>
-                </div>
-
-                <nav id="nav-menu-container">
-                    <ul class="nav-menu">
-                        <li><a href="index.html">Voltar <i class="icon ion-ios-return-left-outline"></i></a></li>
-                    </ul>
-                </nav><!-- #nav-menu-container -->
+    <body>
+        <nav class="navbar navbar-dark navbar-expand-md justify-content-center">
+            <a href="/" class="navbar-brand d-flex w-50 mr-auto"><img th:src="@{/img/avance-oficial.png}"></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbar3">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="navbar-collapse collapse w-100" id="collapsingNavbar3">
+                <ul class="navbar-nav w-100 justify-content-center">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Dashboard</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="#">Treinamentos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Funcionários</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Históricos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Relatórios</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Cronograma</a>
+                    </li>
+                </ul>
+                <ul class="nav navbar-nav ml-auto w-100 justify-content-end">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <i class="icon ion-md-person"></i> Nome do Usuário
+                        </a>
+                        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="#">Action</a>
+                            <a class="dropdown-item" href="#">Another action</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="#">Sair</a>
+                        </div>
+                    </li>
+                </ul>
             </div>
-		</header><!-- #header -->
+        </nav>
 
-		<!--==========================
-    Intro Section
-  ============================-->
-        <section id="introLogin">
-        </section><!-- #intro -->
-
-        <main id="main">
-
-            <!--==========================
-                  Featured Services Section
-                ============================-->
-            <section id="featured-services">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-12 box">
-                        </div>
-                    </div>
-                </div>
-            </section><!-- #featured-services -->
-
-            <!--==========================
-            Contact Section
-            ============================-->
-            <section id="login" class="section-bg wow fadeInUp">
-                <div class="container">
-                    <div class="container login-container text-center">
-                        <div class="row wow">
-                            <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
-                                <div class="card-body">
-                                    <!-- Default form register -->
-                                    <form class="text-center border border-light p-5" action="/cadastro/salvar" method="POST">
-                                    
-                                        <p class="h4 mb-4">Cadastro</p>
-
-                                        <div class="form-row mb-4">
-                                            <div class="col">
-                                                <!-- First name -->
-                                                <input type="text" id="nome" class="form-control" placeholder="Nome">
-                                            </div>
-                                            <div class="col">
-                                                <!-- E-mail -->
-                                        		<input type="email" id="email" class="form-control" placeholder="E-mail">
-                                            </div>
-                                        </div>
-
-                                        <!-- Date Birth number -->
-                                        <input type="date" id="dataNascimento" class="form-control mb-4"
-                                            placeholder="Data de Nascimento">
-
-                                        <!-- CPF number -->
-                                        <input type="text" id="cpf" class="form-control" placeholder="CPF"
-                                            aria-describedby="cpfHelp">
-                                        <small id="cpfHelp" class="form-text text-muted mb-4">
-                                            Formato: XXX.XXX.XXX-XX
-                                        </small>
-
-                                        <!-- E-mail -->
-                                        <input type="text" id="login" class="form-control mb-4" placeholder="Login">
-
-                                        <!-- Password -->
-                                        <input type="password" id="senha" class="form-control" placeholder="Senha"
-                                            aria-describedby="passwordHelpBlock">
-                                        <small id="passwordHelpBlock" class="form-text text-muted mb-4">
-                                            Pelo menos 8 caracteres e 1 dígito
-                                        </small>
-                                    
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section><!-- #contact -->
-
-        </main>
-
-        <!--==========================
-    Footer
-  ============================-->
-        <footer id="footer">
-            <div class="container">
-                <div class="copyright">
-                    &copy; Copyright <strong>Avance</strong> 2019. All Rights Reserved
-                </div>
-                <div class="credits">
-                    <div>Designed by Sávila Saraiva</div>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <h5 class="text-center">OK!</h5>
                 </div>
             </div>
-        </footer><!-- #footer -->
+        </div>
 
-        </main>
+        <script type="text/javascript" th:src="@{/webjars/jquery/3.2.1/jquery.min.js}"></script>
+        <script type="text/javascript" th:src="@{/webjars/bootstrap/4.1.3/js/bootstrap.min.js}"></script>
+        <script type="text/javascript" th:src="@{/webjars/bootstrap/4.1.3/js/bootstrap.bundle.min.js}"></script>
+        <script type="text/javascript"
+            th:src="@{/lib/dataTables/DataTables-1.10.20/js/jquery.dataTables.min.js}"></script>
+        <script type="text/javascript"
+            th:src="@{/lib/dataTables/DataTables-1.10.20/js/dataTables.bootstrap4.min.js}"></script>
+        <script type="text/javascript" th:src="@{/js/dataTables.js}"></script>
+    </body>
 
-        <!--==========================
-    Footer
-  ============================-->
-			<footer id="footer">
-				<div class="container">
-					<div class="copyright">
-						&copy; Copyright <strong>Avance</strong> 2019. All Rights Reserved
-					</div>
-					<div class="credits">
-						<div>Designed by Sávila Saraiva</div>
-					</div>
-				</div>
-			</footer><!-- #footer -->
-
-			<a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
-			<!-- <div id="preloader"></div> -->
-
-			<!-- JavaScript Libraries -->
-			<script src="/lib/jquery/jquery.min.js"></script>
-			<script src="/lib/jquery/jquery-migrate.min.js"></script>
-			<script src="/lib/bootstrap/js/bootstrap.bundle.min.js"></script>
-			<script src="/lib/easing/easing.min.js"></script>
-			<script src="/lib/superfish/hoverIntent.js"></script>
-			<script src="/lib/superfish/superfish.min.js"></script>
-			<script src="/lib/wow/wow.min.js"></script>
-			<script src="/lib/waypoints/waypoints.min.js"></script>
-			<script src="/lib/counterup/counterup.min.js"></script>
-			<script src="/lib/owlcarousel/owl.carousel.min.js"></script>
-			<script src="/lib/isotope/isotope.pkgd.min.js"></script>
-			<script src="/lib/lightbox/js/lightbox.min.js"></script>
-			<script src="/lib/touchSwipe/jquery.touchSwipe.min.js"></script>
-			<script src="/js/feather.min.js"></script>
-			<script src="/js/Chart.min.js"></script>
-
-			<!-- Contact Form JavaScript File -->
-			<script src="/js/contactform.js"></script>
-
-			<!-- Template Main Javascript File -->
-			<script src="/js/main.js"></script>
-			<script src="/js/main(2).js"></script>
-	</body>
 </html>
