--- a/avance/src/main/resources/templates/login-v1.html
+++ b/avance/src/main/resources/templates/login-v1.html
@@ -16,9 +16,11 @@
     <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/4.1.3/css/bootstrap.min.css}" />
     <link rel="stylesheet" type="text/css" th:href="@{/lib/darkly/bootstrap.min.css}" />
     <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}" />
+    <link rel="stylesheet" type="text/css" th:href="@{/css/login.css}" />
   </head>
 
   <body>
+    
     <div class="container w-100">
       <div class="row">
         <div class="col-md-12 min-vh-100 d-flex flex-column justify-content-center">
